@@ -53,6 +53,7 @@ Abbreviated Changelog from 2.9.3 Final
 - Added some simple database statistics to diagnostics and status screen in management. 
 - Improved the version cleanup strategy to prioritize versions not to close together. If two versions are less then 8 hours apart they are considered less important than older versions.
 - Fixed so file names are converted with the same logic as the new nice uri conversion logic.
+- Added statistics on how many unused assets were in the system and sql instructions to delete them.
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.9.3 Final
